profile.dev.debug = true

[package]
name = "rust-discord"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.3"
futures = "0.3.30"
serde = "1.0.199"
serenity = "0.12.1"
librespot = { version = "0.4.2", default-features = false }
songbird = "0.4.1"
tokio = { version = "1.37.0", features = ["full"] }
toml = "0.8.12"
rubato = "0.12.0"
byteorder = "1.5.0"
symphonia = "0.5.4"
